[gd_scene load_steps=4 format=3 uid="uid://dpsfn3b3tdl51"]

[ext_resource type="Texture2D" uid="uid://dguurknf1lbgn" path="res://assets/visuals/sprites/32-sprite.png" id="1_7jac7"]
[ext_resource type="Script" path="res://scenes/game_gui/game_gui.gd" id="1_uanbx"]
[ext_resource type="Theme" uid="uid://dgotkhuyeu2af" path="res://assets/theme.tres" id="3_8fm1a"]

[node name="GameGui" type="Control" groups=["gamegui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uanbx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="X_Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(220, 238)
texture = ExtResource("1_7jac7")

[node name="Y_Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(249, 223)
texture = ExtResource("1_7jac7")

[node name="A_Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(249, 253)
texture = ExtResource("1_7jac7")

[node name="B_Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(278, 238)
texture = ExtResource("1_7jac7")

[node name="Health_Label" type="Label" parent="CanvasLayer"]
offset_left = 7.0
offset_top = 211.0
offset_right = 55.0
offset_bottom = 219.0
theme = ExtResource("3_8fm1a")
text = "Health: 3"
